Background Image changes

--- a/css/agency.css
+++ b/css/agency.css
@@ -182,7 +182,7 @@ img::-moz-selection {
 header.masthead {
     text-align: center;
     color: #fe6d36;
-    background-image: url("../img/myself.jpg");
+    background-image: url("../img/myself.jpeg");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
